# chord.py

./: LICENSE  README.md  pyproject.toml
example/: basic.py
src/chord.py.egg-info/: PKG-INFO  SOURCES.txt
