[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chord.py"
version = "0.0.1"
authors = [
    { name="Agent0876", email="shinseungmin070920@gmail.com" },
]
description = "A Python wrapper for the Discord API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://agent0876.xyz"
"Bug Tracker" = "https://github.com/chordpy/chord.py/issues"